CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(dynamixel_zmq)

SET(Boost_USE_STATIC_LIBS        OFF)
SET(Boost_USE_MULTITHREADED      OFF)

SET(USE_DYNAMIXEL_BUNDLED        ON)

FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)

SET(CMAKE_CXX_FLAGS "-g -Wall")
ADD_SUBDIRECTORY(src)