CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(dynamixel_zmq)

SET(Boost_USE_STATIC_LIBS        OFF)
SET(Boost_USE_MULTITHREADED      OFF)

SET(USE_DYNAMIXEL_BUNDLED        ON)

#enables pypose special commands
SET(ENABLE_PYPOSE_COMMANDS       ON)

SET(CMAKE_CXX_FLAGS "-g -Wall")
IF(ENABLE_PYPOSE_COMMANDS) 
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DENABLE_PYPOSE_COMMANDS")
ENDIF()

FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)

ADD_SUBDIRECTORY(src)