CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(dynamixel_zmq)

SET(Boost_USE_STATIC_LIBS        OFF)
SET(Boost_USE_MULTITHREADED      OFF)

SET(USE_DYNAMIXEL_BUNDLED        OFF)

#enables pypose special commands
IF (WITH_PYPOSE)
	SET(ENABLE_PYPOSE_COMMANDS     ON)
ELSE()
	SET(ENABLE_PYPOSE_COMMANDS     OFF)
ENDIF()

IF (WITH_TROSSEN)
	SET(ENABLE_TROSSEN_COMMANDER   ON)
ELSE()
	SET(ENABLE_TROSSEN_COMMANDER   OFF)
ENDIF()

SET(CMAKE_CXX_FLAGS "-I ${CMAKE_CURRENT_BINARY_DIR}/src -I ${CMAKE_CURRENT_SOURCE_DIR}/src -g -Wall")

FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)

ADD_SUBDIRECTORY(src)